feat: Add interactive checklists to all concept pages

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -61,31 +61,31 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup your canvas.</strong> Go to Canva's homepage, click "Create a design" and choose "Video" (or a custom 1080x1080px size).</li>
             <li><strong>Step 2: Find your elements.</strong> In the editor, click the "Elements" tab on the left.
-                <ul>
+                <ul class="checklist">
                     <li>Search for "python logo" (or your app's icon) and add it.</li>
                     <li>Search for "gear icon" and "cube" for dependencies. Add a few.</li>
                     <li>Search for "shipping container" and choose a simple one.</li>
                 </ul>
             </li>
             <li><strong>Step 3: Animate the container.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Click on the shipping container icon you added.</li>
                     <li>In the top toolbar, click the "Animate" button.</li>
                     <li>In the left panel, choose the "Drift" animation. You can adjust the direction if you like.</li>
                 </ul>
             </li>
             <li><strong>Step 4: Animate the app icons.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Hold the `Shift` key and click on your app logo and all dependency icons to select them all at once.</li>
                     <li>Click "Animate" from the top toolbar again.</li>
                     <li>Choose the "Pop" animation.</li>
                 </ul>
             </li>
             <li><strong>Step 5: Adjust timing.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>At the bottom of the editor, click the "Show timing" button (or it may already be visible). This opens the timeline.</li>
                     <li>You will see purple bars for each animation. Drag the start of the "Pop" animation bar so it begins *after* the container's "Drift" animation has finished.</li>
                 </ul>
@@ -105,5 +105,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
