--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -55,11 +55,11 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design. Add three large, labeled boxes for "Call Stack", "Web API", and "Callback Queue".</li>
             <li><strong>Step 2: Create Task.</strong> Add a small rectangle shape to represent your async task.</li>
             <li><strong>Step 3: Animate the Journey.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Select the task block. Click "Animate" > <strong>"Drift"</strong>. Draw a path for it moving from the Call Stack to the Web API.</li>
                     <li>Add another <strong>"Drift"</strong> animation for it to move from the Web API to the Callback Queue.</li>
                     <li>Add a final <strong>"Drift"</strong> animation for it to move from the queue back into the Call Stack.</li>
@@ -79,5 +79,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
