--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -53,11 +53,11 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design in Canva.</li>
             <li><strong>Step 2: Add Icons & Arrows.</strong> Go to "Elements" and search for "code brackets", "gear", "checkmark", and "rocket ship". Place them in order from left to right. Search for "arrow" and place arrows between them.</li>
             <li><strong>Step 3: Animate the Flow.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Click the first arrow. Select "Animate" > <strong>"Wipe"</strong>. Adjust the direction to match the flow.</li>
                     <li>Click the gear icon. Select "Animate" > <strong>"Spin"</strong>.</li>
                     <li>Click the second arrow and apply the <strong>"Wipe"</strong> animation.</li>
@@ -67,7 +67,7 @@
                 </ul>
             </li>
             <li><strong>Step 4: Adjust Timing.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Open the timeline by clicking "Show timing".</li>
                     <li>Drag the animation bars so each one starts just as the previous one finishes, creating a chain reaction.</li>
                 </ul>
@@ -85,5 +85,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
