--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -57,11 +57,11 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
             <li><strong>Step 2: Create Main Branch.</strong> Use the "Line" element to draw a straight horizontal line. Add small circles on top for commits. Group them together.</li>
             <li><strong>Step 3: Animate Branching.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Draw a new dashed line that starts from the main line and goes upwards at an angle.</li>
                     <li>Select the dashed line, click "Animate" > <strong>"Wipe"</strong>. This will make it look like it's being drawn.</li>
                     <li>Add new circle elements on the new branch. Select them and choose the <strong>"Pop"</strong> or <strong>"Fade"</strong> animation.</li>
@@ -81,5 +81,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
