--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -55,17 +55,17 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
             <li><strong>Step 2: Add Icons.</strong> In "Elements", search for and add a "laptop" icon and a "server" icon, placing them on opposite sides of the canvas.</li>
             <li><strong>Step 3: Animate Request.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Add an "envelope" icon near the laptop.</li>
                     <li>Select the envelope, click "Animate". Choose the <strong>"Drift"</strong> animation and set its path towards the server.</li>
                 </ul>
             </li>
             <li><strong>Step 4: Animate Server & Response.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Click the server icon. Choose the <strong>"Pulse"</strong> animation.</li>
                     <li>Add a second, different colored envelope icon near the server.</li>
                     <li>Animate this second envelope with <strong>"Drift"</strong>, setting its path back to the laptop.</li>
@@ -85,5 +85,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
