--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -63,12 +63,12 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
             <li><strong>Step 2: Create Nodes.</strong> In "Elements", add two large square shapes at the bottom of the canvas. These are your Nodes.</li>
             <li><strong>Step 3: Create Pods.</strong> Add several smaller circle shapes at the top of the canvas. These are your Pods.</li>
             <li><strong>Step 4: Animate Scheduling.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Select one of the Pod circles.</li>
                     <li>Click "Animate" and choose the <strong>"Drift"</strong> animation.</li>
                     <li>In the animation settings, you can draw a path for the Pod to follow, guiding it into one of the Node squares.</li>
@@ -89,5 +89,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
