--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -52,11 +52,11 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
             <li><strong>Step 2: Create Boxes.</strong> In "Elements", add four different colored, nested rectangle shapes. Place the smallest "Content" box in the center, then a larger "Padding" box behind it, and so on.</li>
             <li><strong>Step 3: Animate Layers.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Select the "Padding" box. Click "Animate" > <strong>"Breathe"</strong>.</li>
                     <li>Select the "Border" box. Click "Animate" > <strong>"Wipe"</strong>.</li>
                     <li>Select the outer "Margin" box. Click "Animate" > <strong>"Fade"</strong>.</li>
@@ -76,5 +76,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
