--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -55,16 +55,16 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design. On the left, show two branches. On the right, show the same two branches.</li>
             <li><strong>Step 2: Animate Merge (Left Side).</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Draw two short lines that connect the ends of both branches to a new circle (the merge commit).</li>
                     <li>Select these new lines and the circle. Animate them with <strong>"Wipe"</strong> and <strong>"Fade"</strong> respectively.</li>
                 </ul>
             </li>
             <li><strong>Step 3: Animate Rebase (Right Side).</strong>
-                <ul>
+                <ul class="checklist">
                     <li>Select the commits from the feature branch. Animate them with <strong>"Drift"</strong> to move them to the end of the main branch.</li>
                     <li>Use the timeline to make them move one after the other.</li>
                 </ul>
@@ -82,5 +82,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
