--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -58,10 +58,10 @@
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <p>Follow these clicks to create the animation in Canva:</p>
-        <ul>
+        <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design. Place the Prometheus logo in the center and other app icons around it.</li>
             <li><strong>Step 2: Animate the Scrape.</strong>
-                <ul>
+                <ul class="checklist">
                     <li>In "Elements", find a "magnifying glass" icon.</li>
                     <li>Select it, click "Animate", and choose <strong>"Drift"</strong>. Draw a path from Prometheus to the first app.</li>
                     <li>Select the app icon and give it a <strong>"Pulse"</strong> animation.</li>
@@ -83,5 +83,6 @@
     </script>
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
+    <script src="../checklist.js" defer></script>
 </body>
 </html>
