feat: Display build status badge on homepage

--- a/5_Symbols/index.html
+++ b/5_Symbols/index.html
@@ -9,6 +9,11 @@
     <div id="menu-placeholder"></div>
     <div class="container">
         <h1>Animated Tech Concepts</h1>
+        <div class="build-status">
+            <a href="https://github.com/rifaterdemsahin/canva-animations/actions/workflows/static.yml" target="_blank" rel="noopener noreferrer" title="View Build Status">
+                <img src="https://github.com/rifaterdemsahin/canva-animations/actions/workflows/static.yml/badge.svg" alt="Build Status">
+            </a>
+        </div>
         <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
         <ul>
             <li><a href="concepts/1-docker-containerization.html">Docker Containerization</a></li>
