feat: Add dynamic deployment date to homepage

--- a/5_Symbols/index.html
+++ b/5_Symbols/index.html
@@ -13,6 +13,7 @@
             <a href="https://github.com/rifaterdemsahin/canva-animations/actions/workflows/static.yml" target="_blank" rel="noopener noreferrer" title="View Build Status">
                 <img src="https://github.com/rifaterdemsahin/canva-animations/actions/workflows/static.yml/badge.svg" alt="Build Status">
             </a>
+            <p class="last-deployed">Last Deployed: __DEPLOY_DATE__</p>
         </div>
         <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
         <ul>
