feat: Add asset search prompts to all pages

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -26,7 +26,7 @@
         <pre class="mermaid">
             graph TD
                 subgraph host["Host Machine"]
-                    subgraph container["Docker Container"]
+                    subgraph container["Docker Container 🐳"]
                         direction LR
                         app["Application Code"] --> deps["Dependencies & Libraries"]
                     end
@@ -60,6 +60,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-1">Copy</button>
+        </div>
+        <div id="search-prompt-1">
+            <p><code>simple shipping container icon vector</code>, <code>python logo icon</code>, <code>gear icon minimalist</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup your canvas.</strong> Go to Canva's homepage, click "Create a design" and choose "Video" (or a custom 1080x1080px size).</li>
