--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -54,6 +54,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-8">Copy</button>
+        </div>
+        <div id="search-prompt-8">
+            <p><code>git merge icon</code>, <code>git rebase icon</code>, <code>branching diagram vector</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design. On the left, show two branches. On the right, show the same two branches.</li>
