--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -57,6 +57,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-9">Copy</button>
+        </div>
+        <div id="search-prompt-9">
+            <p><code>prometheus logo icon</code>, <code>magnifying glass icon</code>, <code>simple chart icon</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design. Place the Prometheus logo in the center and other app icons around it.</li>
