--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -56,6 +56,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-3">Copy</button>
+        </div>
+        <div id="search-prompt-3">
+            <p><code>line with circles icon</code>, <code>dashed line vector</code>, <code>git branch diagram icon</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
