--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -54,6 +54,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-4">Copy</button>
+        </div>
+        <div id="search-prompt-4">
+            <p><code>laptop icon minimalist</code>, <code>server icon vector</code>, <code>envelope icon simple</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
