--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -51,6 +51,13 @@
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
+        <div class="copy-container">
+            <h4>🔍 Asset Search Prompts</h4>
+            <button class="copy-btn" data-copy-target="#search-prompt-6">Copy</button>
+        </div>
+        <div id="search-prompt-6">
+            <p><code>nested squares diagram</code>, <code>concentric rectangles icon</code></p>
+        </div>
         <p>Follow these clicks to create the animation in Canva:</p>
         <ul class="checklist">
             <li><strong>Step 1: Setup.</strong> Create a new "Video" design.</li>
