--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -21,9 +21,9 @@
         </div>
         <pre class="mermaid">
             graph TD
-                A["Call Stack"]
-                B["Web API"]
-                C["Callback Queue"]
+                A["Call Stack 📜"]
+                B["Web API 🌐"]
+                C["Callback Queue ⏱️"]
                 A -- "setTimeout()" --> B
                 B -- "Timer Finishes" --> C
                 A -- "Is Empty?" --> C
