--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -23,7 +23,7 @@
             graph LR
                 A["Code Commit"] --> B("Build Server");
                 B --> C{"Run Tests"};
-                C -- "Pass" --> D(("Deploy to Production"));
+                C -- "Pass" --> D(("Deploy to Production 🚀"));
                 C -- "Fail" --> E["Notify Developers"];
         </pre>
 
