--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -21,9 +21,9 @@
         </div>
         <pre class="mermaid">
             graph TD
-                M("Margin") --> B("Border")
-                B --> P("Padding")
-                P --> C["Content"]
+                M("Margin ↔️") --> B("Border 🚧")
+                B --> P("Padding 🧱")
+                P --> C["Content 📦"]
         </pre>
 
         <!-- AI Image Prompt -->
