--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -22,8 +22,8 @@
         <pre class="mermaid">
             graph TD
                 subgraph "Result of Git Merge"
-                    A["main"] --> C("Merge Commit")
-                    B["feature"] --> C
+                    A["main 🌳"] --> C("Merge Commit")
+                    B["feature 🌿"] --> C
                 end
                 subgraph "Result of Git Rebase"
                     D["main"] --> E["feature's work"] --> F["re-applied"]
