--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -21,9 +21,9 @@
         </div>
         <pre class="mermaid">
             sequenceDiagram
-                participant P as Prometheus
-                participant A1 as App 1
-                participant A2 as App 2
+                participant P as Prometheus ⚙️
+                participant A1 as App 1 💻
+                participant A2 as App 2 📱
                 loop Scrape Interval
                     P->>A1: Pull /metrics
                     A1-->>P: Metric data
