--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -23,7 +23,7 @@
             gitGraph
                commit
                commit id: "feat: initial work"
-               branch feature-branch
+               branch feature-branch 🌿
                checkout feature-branch
                commit
                checkout main
