--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -21,8 +21,8 @@
         </div>
         <pre class="mermaid">
             sequenceDiagram
-                participant Client
-                participant Server
+                participant Client 💻
+                participant Server 🖥️
                 Client->>Server: GET /api/data (Request)
                 activate Server
                 Server-->>Client: 200 OK [JSON Data] (Response)
