--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -22,9 +22,9 @@
         <pre class="mermaid">
             graph LR
                 subgraph "External Config"
-                    A[".env file<br/>API_KEY=xyz123"]
+                    A[".env file 📄<br/>API_KEY=xyz123"]
                 end
-                subgraph "Docker Container"
+                subgraph "Docker Container 🐳"
                     B{"App reads<br/>process.env.API_KEY"}
                 end
                 A -- "Injected at Runtime" --> B
