feat: Replace local videos with YouTube embeds

--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -42,7 +42,9 @@
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>Animating the journey of an asynchronous task through the different parts of the browser environment makes the complex JavaScript event loop far easier to comprehend than a static diagram.</p>
-        <video src="../animations/10-js-event-loop.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/8aGhZQc_tsI" title="What the heck is the event loop anyway?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
