--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -43,7 +43,9 @@
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
-        <video src="../animations/3-git-branching.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/2eL-d4-zU6Y" title="Introduction to Git - Branching and Merging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
