--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -42,7 +42,9 @@
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This provides a direct visual comparison of the two commands, highlighting the critical difference in their resulting project history (a new commit vs. a linear sequence).</p>
-        <video src="../animations/8-git-merge-rebase.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/_P3j22bZ1zo" title="Git Rebase Vs Git Merge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
