--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -39,7 +39,9 @@
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation transforms a static flowchart into a dynamic process, showing the automated, sequential flow of code moving toward production.</p>
-        <video src="../animations/2-ci-cd.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/fT2Wp3f_k3Y" title="What is CI/CD?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
