--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -44,7 +44,9 @@
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
         <p>This animation clarifies the "pull-based" model of Prometheus, showing it actively going out to gather metrics from different applications in a repeating loop.</p>
-        <video src="../animations/9-prometheus-scraping.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/_M3R-M09-I" title="Prometheus Monitoring for Beginners" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
