feat: Add GitHub activity chart to homepage

--- a/5_Symbols/index.html
+++ b/5_Symbols/index.html
@@ -15,6 +15,12 @@
             </a>
             <p class="last-deployed">Last Deployed: __DEPLOY_DATE__</p>
         </div>
+
+        <div class="activity-chart">
+            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Activity">
+                <img src="https://contrib.rocks/image?repo=rifaterdemsahin/canva-animations" alt="GitHub Activity Chart">
+            </a>
+        </div>
         <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
         <ul>
             <li><a href="concepts/1-docker-containerization.html">Docker Containerization</a></li>
