fix: Improve deployment date script and update activity visual

--- a/5_Symbols/index.html
+++ b/5_Symbols/index.html
@@ -17,8 +17,13 @@
         </div>
 
         <div class="activity-chart">
-            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Activity">
-                <img src="https://contrib.rocks/image?repo=rifaterdemsahin/canva-animations" alt="GitHub Activity Chart">
+            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=rifaterdemsahin&repo=canva-animations&layout=compact&theme=dark&hide_border=true" alt="Top Languages">
+            </a>
+        </div>
+        <div class="activity-chart">
+            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
+                <img src="https://github-readme-stats.vercel.app/api?username=rifaterdemsahin&repo=canva-animations&show_icons=true&theme=dark&hide_border=true" alt="GitHub Stats">
             </a>
         </div>
         <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
