feat: Add site-wide footer and move stats

--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -99,5 +99,6 @@
     <script src="../shared-menu.js" defer></script>
     <script src="../copy-button.js" defer></script>
     <script src="../checklist.js" defer></script>
+<div id="footer-placeholder"></div>
 </body>
 </html>
