--- a/5_Symbols/index.html
+++ b/5_Symbols/index.html
@@ -16,17 +16,7 @@
             <p class="last-deployed">Last Deployed: __DEPLOY_DATE__</p>
         </div>
 
-        <div class="activity-chart">
-            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
-                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=rifaterdemsahin&repo=canva-animations&layout=compact&theme=dark&hide_border=true" alt="Top Languages">
-            </a>
-        </div>
-        <div class="activity-chart">
-            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
-                <img src="https://github-readme-stats.vercel.app/api?username=rifaterdemsahin&repo=canva-animations&show_icons=true&theme=dark&hide_border=true" alt="GitHub Stats">
-            </a>
-        </div>
-        <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
+                <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
         <ul>
             <li><a href="concepts/1-docker-containerization.html">Docker Containerization</a></li>
             <li><a href="concepts/2-ci-cd-pipeline.html">CI/CD Pipeline</a></li>
@@ -39,7 +29,20 @@
             <li><a href="concepts/9-prometheus-scraping.html">Prometheus Scraping</a></li>
             <li><a href="concepts/10-js-event-loop.html">JavaScript Event Loop</a></li>
         </ul>
+
+        <div class="activity-chart">
+            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=rifaterdemsahin&repo=canva-animations&layout=compact&theme=dark&hide_border=true" alt="Top Languages">
+            </a>
+        </div>
+        <div class="activity-chart">
+            <a href="https://github.com/rifaterdemsahin/canva-animations" target="_blank" rel="noopener noreferrer" title="View Repository Stats">
+                <img src="https://github-readme-stats.vercel.app/api?username=rifaterdemsahin&repo=canva-animations&show_icons=true&theme=dark&hide_border=true" alt="GitHub Stats">
+            </a>
+        </div>
+
     </div>
+    <div id="footer-placeholder"></div>
     <script src="shared-menu.js" defer></script>
 </body>
 </html>
